--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>the one and only real fanpage</p>
     <p>interesting pirates content</p>
     <img src="img/pirates-heads.jpg" alt="pirates-heads">
-    <video src="iframe width="560 height="315" src="https://www.youtube.com/embed/op5T2eqWdeA?si=Pf6yoDhbZVKNmw-G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></video>
+    <iframe src="iframe width="560 height="315" src="https://www.youtube.com/embed/op5T2eqWdeA?si=Pf6yoDhbZVKNmw-G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></video>
+toevoeging
 </body>
 </html>
